--- a/vremenska-osnovna-gotovo-master/static/css/style.css
+++ b/vremenska-osnovna-gotovo-master/static/css/style.css
@@ -19,7 +19,7 @@ font-size:50px;
 }
 
 .centered {
-  position: absolute;
+  color: white;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
